[project]
name = "leaky-poetry-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Mehl",email = "mail@mehl.mx"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography (==42.0.4)",
    "urllib3 (==2.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "2.6.1"

